--- a/pages/Compras/compras.html
+++ b/pages/Compras/compras.html
@@ -5,6 +5,8 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="keywords" content="compras en linea, tienda online, marcas de ropa, compras confiables, productos, compra rapida, metodos de pago, envios, ofertas, ropa de calidad">
+<meta name="description" content="Realiza la compra de tu producto de confianza con la mejor accesibilidad para la compra para el usuario...">
 <title>Pantera negra</title>
 <link rel="icon" href="../../../img/favicon-16x16.png">
 <!-- google-fonts -->
