--- a/pages/quienes-somos/aboutUs.html
+++ b/pages/quienes-somos/aboutUs.html
@@ -5,6 +5,8 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="keywords" content="sobre nosotros, nuestra historia, certificaciones, reconocimientos, experiencia, equipos, colaboraciones, objetivos">
+<meta name="description" content="Quiénes somos: Somos una tienda de ropa especializada en moda urbana. Nuestro objetivo es ofrecer a nuestros clientes prendas de alta calidad a precios asequibles. Trabajamos con marcas reconocidas y diseñadores independientes para ofrecer una amplia variedad de estilos y opciones de vestimenta... ">
 <title>Pantera negra</title>
 <link rel="icon" href="../../img/favicon-16x16.png">
 <!-- google-fonts -->
