--- a/pages/quienes-somos/politicaPrivacidad.html
+++ b/pages/quienes-somos/politicaPrivacidad.html
@@ -5,6 +5,8 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="keywords" content="politicas de privacidad, politica de menores, responsabilidad, cookies, seguimiento, recopilacion de datos, uso de la informacion personal, privacidad, retencion de datos">
+<meta name="description" content="Políticas de privacidad: Información que recopilamos, En nuestra tienda en línea recopilamos la siguiente información:Nombre, Direccion de envio, Informacion del pago. La información recopilada se utiliza para procesar y enviar pedidos, mejorar nuestro sitio web y brindar soporte al cliente... ">
 <title>Pantera negra</title>
 <link rel="icon" href="../../img/favicon-16x16.png">
 <!-- google-fonts -->
