--- a/pages/quienes-somos/terminosCondiciones.html
+++ b/pages/quienes-somos/terminosCondiciones.html
@@ -5,6 +5,8 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="keywords" content="Cookies, Seguridad de la informacion, Uso adecuado del sitio, Confidencialidad, Derechos de autor, Politica de envio">
+<meta name="description" content="Términos y Condiciones: Este sitio web es propiedad de Pantera Negra, El uso de este sitio web está sujeto a los siguientes términos y condiciones de uso: El contenido de las páginas de este sitio web es para su información general y uso solamente. Está sujeto a cambios sin previo aviso... ">
 <title>Pantera negra</title>
 <link rel="icon" href="../../img/favicon-16x16.png">
 <!-- google-fonts -->
@@ -46,7 +48,7 @@
                     <h1 id="principal">Términos y Condiciones</h1>
                 <p class="pterm">Por favor lea estos términos y condiciones cuidadosamente antes de utilizar este sitio web.</p>
                 <ul class="ulterm">
-                    <li class="literms">Este sitio web es propiedad de [Nombre de la empresa].</li>
+                    <li class="literms">Este sitio web es propiedad de Pantera Negra.</li>
                     <li class="literms">El uso de este sitio web está sujeto a los siguientes términos y condiciones de uso:</li>
                     <li class="literms">El contenido de las páginas de este sitio web es para su información general y uso solamente. Está sujeto a cambios sin previo aviso.</li>
                     <li class="literms">Ni nosotros ni terceros proporcionamos ninguna garantía o garantía en cuanto a la exactitud, puntualidad, rendimiento, integridad o idoneidad de la información y los materiales encontrados u ofrecidos en este sitio web para cualquier propósito particular. Usted reconoce que tal información y materiales pueden contener inexactitudes o errores y expresamente excluimos la responsabilidad por cualquier inexactitud o error en la medida máxima permitida por la ley.</li>
