--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,8 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="keywords" content="Contacto, Consultas de clientes, Soporte al cliente, Redes sociales, Direccion, Devoluciones y cambios, Consulta dwe productos, asesoramiento">
+<meta name="description" content="Contacta con nuestra empresa de marca de ropa numero uno en el mercado con la mejor calidad que puedes encontrar...">
 <title>Pantera negra</title>
 <link rel="icon" href="../img/favicon-16x16.png">
 
