--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -5,6 +5,8 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="keywords" content="ropa, compra segura, Ropa para hombres/mujeres/niños, Tienda de ropa online, Accesorios de moda, Ropa de marca, Estilos de ropa">
+<meta name="description" content="Comprá online productos de Remeras / remerones con estampa desde $1.290. Tenemos remera algodón acdc, remera algodon rolling lenguas y más. Hacé tu pedido, pagalo online y recibilo donde quieras.">
 <title>Pantera negra</title>
 <link rel="icon" href="../img/favicon-16x16.png">
 <!-- google-fonts -->
